--- a/css/style.css
+++ b/css/style.css
@@ -695,8 +695,7 @@ h6,
 
 .header {
   background-image: url("https://images.unsplash.com/photo-1530814394340-02d8010713d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80");
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
-  height: 80vh;
+  height: 67vh;
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -705,51 +704,6 @@ h6,
   -moz-transition: all 0.5s;
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.profile__name {
-  font-size: 6rem;
-  font-weight: 400;
-  color: var(--background);
-  padding: 0 1rem;
-  background: linear-gradient(
-    to bottom,
-    rgba(46, 55, 68, 0.4),
-    rgba(46, 55, 68, 0.6),
-    rgba(28, 30, 33, 0.8)
-  );
-}
-@media only screen and (max-width: 62em) {
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 78%, 50% 100%, 0 78%);
-  }
-}
-@media only screen and (max-width: 48em) {
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 81%, 50% 100%, 0 81%);
-  }
-}
-@media only screen and (max-width: 36em) {
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
-  }
-}
-@media only screen and (max-width: 30em) {
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
-  }
-}
-@media only screen and (max-width: 23.75em) {
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 87%, 50% 100%, 0 87%);
-  }
-}
-@media only screen and (max-width: 20em) {
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
-  }
 }
 .photo {
   position: relative;
@@ -834,7 +788,7 @@ h6,
 .profile__icon {
   width: 4rem;
   height: 4rem;
-  fill: var(--color-light);
+  fill: currentColor;
   transition: all 0.2s;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
@@ -861,7 +815,6 @@ h6,
   padding: 0 0rem 5rem 0rem;
   width: 80%;
   margin: 0 auto;
-  margin-top: 5rem;
   display: grid;
   grid-template-columns: 40rem 1fr;
   column-gap: 5rem;
@@ -1041,14 +994,12 @@ h6,
   background-position: top;
   background-attachment: fixed;
   width: 100%;
-  height: 100vh;
+  height: 75vh;
   display: flex;
   justify-content: center;
   align-items: center;
   color: var(--background);
-  /* clip-path: polygon(0 0, 100% 20vh, 100% 100vh, 0 80vh); */
 }
-
 .statistics__box {
   width: 80%;
   display: grid;
