--- a/css/style.css
+++ b/css/style.css
@@ -695,8 +695,8 @@ h6,
 
 .header {
   background-image: url("https://images.unsplash.com/photo-1530814394340-02d8010713d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80");
-
-  height: 67vh;
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
+  height: 80vh;
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -816,6 +816,7 @@ h6,
   padding: 0 0rem 5rem 0rem;
   width: 80%;
   margin: 0 auto;
+  margin-top: 5rem;
   display: grid;
   grid-template-columns: 40rem 1fr;
   column-gap: 5rem;
@@ -995,11 +996,12 @@ h6,
   background-position: top;
   background-attachment: fixed;
   width: 100%;
-  height: 75vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   color: var(--background);
+  clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 80%);
 }
 .statistics__box {
   width: 80%;
