--- a/css/style.css
+++ b/css/style.css
@@ -706,6 +706,36 @@ h6,
   -ms-transition: all 0.5s;
   -o-transition: all 0.5s;
 }
+@media only screen and (max-width: 62em) {
+  .header {
+    clip-path: polygon(0 0, 100% 0, 100% 78%, 50% 100%, 0 78%);
+  }
+}
+@media only screen and (max-width: 48em) {
+  .header {
+    clip-path: polygon(0 0, 100% 0, 100% 81%, 50% 100%, 0 81%);
+  }
+}
+@media only screen and (max-width: 36em) {
+  .header {
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
+  }
+}
+@media only screen and (max-width: 30em) {
+  .header {
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
+  }
+}
+@media only screen and (max-width: 23.75em) {
+  .header {
+    clip-path: polygon(0 0, 100% 0, 100% 87%, 50% 100%, 0 87%);
+  }
+}
+@media only screen and (max-width: 20em) {
+  .header {
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
+  }
+}
 .photo {
   position: relative;
   width: 20%;
@@ -1001,8 +1031,9 @@ h6,
   justify-content: center;
   align-items: center;
   color: var(--background);
-  clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 80%);
+  clip-path: polygon(0 0, 100% 20vh, 100% 100vh, 0 80vh);
 }
+
 .statistics__box {
   width: 80%;
   display: grid;
